--- a/FsCoreSerializer/FsCoreSerializer.fsproj
+++ b/FsCoreSerializer/FsCoreSerializer.fsproj
@@ -18,7 +18,7 @@
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Debug\FsCoreSerializer.XML</DocumentationFile>
   </PropertyGroup>
@@ -27,7 +27,7 @@
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;OPTIMIZE_FSHARP</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\FsCoreSerializer.XML</DocumentationFile>
   </PropertyGroup>
@@ -41,7 +41,9 @@
     <Compile Include="ISerializer.fs" />
     <Compile Include="Serializers.fs" />
     <Compile Include="TypeFormatter.fs" />
+    <Compile Include="ObjHeader.fs" />
     <Compile Include="Formatter.fs" />
+    <Compile Include="Interfaces.fs" />
     <Compile Include="BaseFormatters.fs" />
     <Compile Include="ArrayFormatter.fs" />
     <Compile Include="TypeShape.fs" />
