--- a/FsCoreSerializer/FsCoreSerializer.fsproj
+++ b/FsCoreSerializer/FsCoreSerializer.fsproj
@@ -39,15 +39,16 @@
     <Compile Include="Utils.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="ISerializer.fs" />
-    <Compile Include="Serializers.fs" />
-    <Compile Include="ObjHeader.fs" />
+    <Compile Include="DotNetSerializers.fs" />
     <Compile Include="TypeFormatter.fs" />
+    <Compile Include="ObjHeader.fs" />
     <Compile Include="Formatter.fs" />
     <Compile Include="Interfaces.fs" />
+    <Compile Include="TypeShape.fs" />
+    <Compile Include="FormatterUtils.fs" />
     <Compile Include="BaseFormatters.fs" />
     <Compile Include="ArrayFormatter.fs" />
-    <Compile Include="TypeShape.fs" />
-    <Compile Include="FSharpFormatters.fs" />
+    <Compile Include="FsTypeFormatters.fs" />
     <Compile Include="FormatterResolution.fs" />
     <Compile Include="FsCoreSerializer.fs" />
     <None Include="Samples.fsx" />
