added performance tests

--- a/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
+++ b/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
@@ -46,6 +46,7 @@
     <Compile Include="Utils.fs" />
     <Compile Include="CorrectnessTests.fs" />
     <Compile Include="RemoteTests.fs" />
+    <Compile Include="PerformanceTests.fs" />
     <Compile Include="main.fs" />
   </ItemGroup>
   <ItemGroup>
