--- a/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
+++ b/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
@@ -43,6 +43,7 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
     <Compile Include="FsUnit.fs" />
+    <Compile Include="Serializers.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="CorrectnessTests.fs" />
     <Compile Include="RemoteTests.fs" />
@@ -67,6 +68,7 @@
       <Project>{3ad987bf-f0fa-40bd-9dae-4af3a5fe9cc7}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
