--- a/FsCoreSerializer/FsCoreSerializer.fsproj
+++ b/FsCoreSerializer/FsCoreSerializer.fsproj
@@ -39,10 +39,8 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
     <Compile Include="Utils.fs" />
-    <Compile Include="ExpressionTree.fs" />
+    <Compile Include="Expression.fs" />
     <Compile Include="Reflection.fs" />
-    <Compile Include="ISerializer.fs" />
-    <Compile Include="DotNetSerializers.fs" />
     <Compile Include="TypeFormatter.fs" />
     <Compile Include="ObjHeader.fs" />
     <Compile Include="Formatter.fs" />
@@ -63,7 +61,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
