--- a/FsCoreSerializer/FsCoreSerializer.fsproj
+++ b/FsCoreSerializer/FsCoreSerializer.fsproj
@@ -49,6 +49,7 @@
     <Compile Include="FormatterUtils.fs" />
     <Compile Include="BaseFormatters.fs" />
     <Compile Include="ArrayFormatter.fs" />
+    <Compile Include="DotNetFormatters.fs" />
     <Compile Include="FsTypeFormatters.fs" />
     <Compile Include="FormatterResolution.fs" />
     <Compile Include="FsCoreSerializer.fs" />
