typed formatter tests

--- a/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
+++ b/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
@@ -23,7 +23,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\FsCoreSerializer.Tests.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
-    <OtherFlags>--staticlink:FsCoreSerializer</OtherFlags>
+    <OtherFlags>
+    </OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
