fixed EMIT_IL flag

--- a/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
+++ b/FsCoreSerializer.Tests/FsCoreSerializer.Tests.fsproj
@@ -23,8 +23,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\FsCoreSerializer.Tests.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
-    <OtherFlags>
-    </OtherFlags>
+    <OtherFlags>--staticlink:FsCoreSerializer</OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
