--- a/FsCoreSerializer/FsCoreSerializer.fsproj
+++ b/FsCoreSerializer/FsCoreSerializer.fsproj
@@ -18,7 +18,7 @@
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;EMIT_IL;OPTIMIZE_FSHARP</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;OPTIMIZE_FSHARP;EMIT_IL</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Debug\FsCoreSerializer.XML</DocumentationFile>
     <OtherFlags>
@@ -29,7 +29,7 @@
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;OPTIMIZE_FSHARP ; EMIT_IL</DefineConstants>
+    <DefineConstants>TRACE;OPTIMIZE_FSHARP;EMIT_IL</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\FsCoreSerializer.XML</DocumentationFile>
   </PropertyGroup>
