--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -42,7 +42,7 @@
     <Compile Include="Header.fs" />
     <Compile Include="Pickler.fsi" />
     <Compile Include="Pickler.fs" />
-    <Compile Include="Interfaces.fs" />
+    <Compile Include="Types.fs" />
     <Compile Include="PicklerUtils.fs" />
     <Compile Include="ExpressionTrees.fs" />
     <Compile Include="TypePickler.fs" />
@@ -50,9 +50,10 @@
     <Compile Include="ReflectionPicklers.fs" />
     <Compile Include="DotNetPicklers.fs" />
     <Compile Include="FSharpPicklers.fs" />
-    <Compile Include="FSharpCombinators.fs" />
+    <Compile Include="Combinators.fs" />
     <Compile Include="TypeShape.fs" />
     <Compile Include="PicklerResolution.fs" />
+    <Compile Include="PicklerCache.fs" />
     <Compile Include="FsPickler.fs" />
     <Compile Include="ExtensionMethods.fs" />
     <None Include="test.fsx" />
