--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -50,12 +50,13 @@
     <Compile Include="ReflectionPicklers.fs" />
     <Compile Include="DotNetPicklers.fs" />
     <Compile Include="FSharpPicklers.fs" />
-    <Compile Include="Combinators.fs" />
+    <Compile Include="CombinatorImpls.fs" />
     <Compile Include="TypeShape.fs" />
     <Compile Include="PicklerResolution.fs" />
     <Compile Include="PicklerCache.fs" />
     <Compile Include="FsPickler.fs" />
     <Compile Include="ExtensionMethods.fs" />
+    <Compile Include="Combinators.fs" />
     <None Include="test.fsx" />
   </ItemGroup>
   <ItemGroup>
