--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="FsPickler.fs" />
     <Compile Include="Combinators.fs" />
     <Compile Include="ExtensionMethods.fs" />
+    <None Include="Test.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
