--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -29,7 +29,7 @@
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;OPTIMIZE_FSHARP;EMIT_IL</DefineConstants>
+    <DefineConstants>TRACE;OPTIMIZE_FSHARP;EMIT_IL;USE_STRONG_NAMES</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
