--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="assemblyInfo.fs" />
     <Compile Include="Utils.fs" />
+    <Compile Include="Hashing.fs" />
     <Compile Include="Header.fs" />
     <Compile Include="Pickler.fsi" />
     <Compile Include="Pickler.fs" />
