--- a/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -84,6 +84,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <PropertyGroup>
+    <PreBuildEvent>del "$(TargetDir)\perfResults.xml"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
