--- a/FsPickler.Tests/packages.config
+++ b/FsPickler.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FsUnit" version="1.2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="PerfUtil" version="0.1.1" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.0.3" targetFramework="net45" />
 </packages>
