--- a/FsPickler.Tests/packages.config
+++ b/FsPickler.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="PerfUtil" version="0.1.2" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.3" targetFramework="net45" />
 </packages>
