--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -51,8 +51,9 @@
     <Compile Include="ReflectionPicklers.fs" />
     <Compile Include="DotNetPicklers.fs" />
     <Compile Include="FSharpPicklers.fs" />
+    <Compile Include="ArrayPickler.fs" />
+    <Compile Include="TuplePicklers.fs" />
     <Compile Include="CombinatorImpls.fs" />
-    <Compile Include="TupleCombinators.fs" />
     <Compile Include="TypeShape.fs" />
     <Compile Include="PicklerResolution.fs" />
     <Compile Include="PicklerCache.fs" />
