--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
 
 script: 
-  - bash -x ./build.sh
+  - ./build.sh
 
