--- a/FsPickler.Tests/packages.config
+++ b/FsPickler.Tests/packages.config
@@ -4,7 +4,8 @@
   <package id="FsUnit" version="1.2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
-  <package id="PerfUtil" version="0.1.4" targetFramework="net45" />
+  <package id="PerfUtil" version="0.1.5" targetFramework="net45" />
+  <package id="PerfUtil.NUnit" version="0.1.5" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.18" targetFramework="net45" />
 </packages>
