update nuspec icon

--- a/nuget/FsPickler.nuspec
+++ b/nuget/FsPickler.nuspec
@@ -7,7 +7,7 @@
       <owners>@authors@</owners>
       <licenseUrl>https://github.com/nessos/FsPickler/blob/master/License.md</licenseUrl>
       <projectUrl>https://github.com/nessos/FsPickler</projectUrl>
-      <iconUrl>http://www.m-brace.net/media/pickler.jpg</iconUrl>
+      <iconUrl>https://avatars1.githubusercontent.com/u/5538081</iconUrl>
       <requireLicenseAcceptance>false</requireLicenseAcceptance>
       <summary>@summary@</summary>
       <description>@description@</description>
