--- a/FsPickler/FsPickler.fsproj
+++ b/FsPickler/FsPickler.fsproj
@@ -79,6 +79,7 @@
     <None Include="Pickler.fsi" />
     <Compile Include="Pickler.fs" />
     <Compile Include="BinaryFormatter.fs" />
+    <Compile Include="XmlFormatter.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="PicklerUtils.fs" />
     <Compile Include="BasePicklers.fs" />
@@ -103,6 +104,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FsPickler.CSharp\FsPickler.CSharp.csproj">
